--- a/database.yaml
+++ b/database.yaml
@@ -95,6 +95,11 @@ spec:
                 secretKeyRef:
                   name: osu-speedrun-secrets
                   key: DB_PASS
+            - name: MYSQL_DATABASE
+              valueFrom:
+                secretKeyRef:
+                  name: osu-speedrun-secrets
+                  key: DB_NAME
             - name: MYSQL_REPLICATION_MODE
               value: "primary"
           ports:
