Add storageClassName to database and redis volumeClaimTemplates; create local-path StorageClass

--- a/redis.yaml
+++ b/redis.yaml
@@ -62,6 +62,7 @@ spec:
     - metadata:
         name: redis-data
       spec:
+        storageClassName: local-path
         accessModes: [ "ReadWriteOnce" ]
         resources:
           requests:
