--- a/database.yaml
+++ b/database.yaml
@@ -64,6 +64,7 @@ spec:
     - metadata:
         name: mysql-data
       spec:
+        storageClassName: local-path
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
@@ -115,6 +116,7 @@ spec:
     - metadata:
         name: mysql-data
       spec:
+        storageClassName: local-path
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
