--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -36,6 +36,26 @@ spec:
           ports:
             - containerPort: 5672
             - containerPort: 15672
+          readinessProbe:
+            exec:
+              command:
+                - rabbitmq-diagnostics
+                - check_port_connectivity
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+          livenessProbe:
+            exec:
+              command:
+                - rabbitmq-diagnostics
+                - status
+            initialDelaySeconds: 60
+            periodSeconds: 60
+            timeoutSeconds: 15
+            successThreshold: 1
+            failureThreshold: 3
           env:
             - name: RABBITMQ_DEFAULT_USER
               valueFrom:
