Update network policy to change database app label from 'database' to 'db'

--- a/score-service.yaml
+++ b/score-service.yaml
@@ -226,7 +226,7 @@ spec:
   - to:
     - podSelector:
         matchLabels:
-          app: database
+          app: db
     ports:
     - protocol: TCP
       port: 3306
