--- a/score-service.yaml
+++ b/score-service.yaml
@@ -62,7 +62,7 @@ spec:
         
         livenessProbe:
           httpGet:
-            path: /health
+            path: /_health
             port: 7000
           initialDelaySeconds: 30
           periodSeconds: 10
@@ -71,7 +71,7 @@ spec:
         
         readinessProbe:
           httpGet:
-            path: /health
+            path: /_health
             port: 7000
           initialDelaySeconds: 5
           periodSeconds: 5
@@ -80,7 +80,7 @@ spec:
         
         startupProbe:
           httpGet:
-            path: /health
+            path: /_health
             port: 7000
           initialDelaySeconds: 10
           periodSeconds: 10
