Update ingress configuration to route traffic to web-api service

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -107,7 +107,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: hanayo
+                name: web-api
                 port:
                   number: 80
           - path: /web
@@ -140,7 +140,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: hanayo
+                name: web-api
                 port:
                   number: 80
           - path: /web
