Add routing for bancho_connect.php to bancho-service-api in ingress configuration

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -110,6 +110,13 @@ spec:
                 name: web-api
                 port:
                   number: 80
+          - path: /web/bancho_connect.php
+            pathType: Exact
+            backend:
+              service:
+                name: bancho-service-api
+                port:
+                  number: 80
           - path: /web
             pathType: Prefix
             backend:
@@ -141,6 +148,13 @@ spec:
             backend:
               service:
                 name: web-api
+                port:
+                  number: 80
+          - path: /web/bancho_connect.php
+            pathType: Exact
+            backend:
+              service:
+                name: bancho-service-api
                 port:
                   number: 80
           - path: /web
