--- a/score-service.yaml
+++ b/score-service.yaml
@@ -211,13 +211,7 @@ spec:
   - Ingress
   - Egress
   ingress:
-  - from:
-    - podSelector:
-        matchLabels:
-          app: bancho-service
-    - podSelector:
-        matchLabels:
-          app: nginx-ingress
+  - from: []
     ports:
     - protocol: TCP
       port: 80
@@ -247,6 +241,8 @@ spec:
     ports:
     - protocol: TCP
       port: 443
+    - protocol: TCP
+      port: 80
     - protocol: TCP
       port: 53
     - protocol: UDP
