--- a/database.yaml
+++ b/database.yaml
@@ -40,7 +40,7 @@ spec:
     spec:
       containers:
         - name: db
-          image: mysql:8.0  # Use the official MySQL image
+          image: mysql:8.0-debian  # Use the official MySQL image
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
@@ -89,7 +89,7 @@ spec:
     spec:
       containers:
         - name: db
-          image: mysql:8.0  # Use the official MySQL image
+          image: mysql:8.0-debian  # Use the official MySQL image
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
