Update volume mount path for filters configuration in bancho-service-api

--- a/bancho.yaml
+++ b/bancho.yaml
@@ -29,7 +29,7 @@ spec:
           value: api
         volumeMounts:
         - name: filters-config
-          mountPath: /srv/root/filters.txt
+          mountPath: /pep.py/filters
           subPath: filters.txt
           readOnly: true
         resources:
