--- a/score-service.yaml
+++ b/score-service.yaml
@@ -1,14 +1,4 @@
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: score-service-config
-  namespace: default
-data:
-  BEATMAPS_SERVICE_BASE_URL: "https://beatmaps.akatsuki.gg"
-  PERFORMANCE_SERVICE_URL: "https://performance.akatsuki.gg"
 
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -58,87 +48,19 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-        
-        livenessProbe:
-          httpGet:
-            path: /_health
-            port: 80
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
-        
-        readinessProbe:
-          httpGet:
-            path: /_health
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          timeoutSeconds: 3
-          failureThreshold: 3
-        
-        startupProbe:
-          httpGet:
-            path: /_health
-            port: 80
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 30
-      
-      affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                - key: app
-                  operator: In
-                  values:
-                  - score-service
-              topologyKey: kubernetes.io/hostname
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: score-service
-  namespace: default
-  labels:
-    app: score-service
-    component: api
 spec:
   type: ClusterIP
   ports:
   - port: 80
     targetPort: 80
-    protocol: TCP
-    name: http
   selector:
     app: score-service
-    component: api
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: score-service-headless
-  namespace: default
-  labels:
-    app: score-service
-    component: api
-spec:
-  type: ClusterIP
-  clusterIP: None
-  ports:
-  - port: 80
-    targetPort: 80
-    protocol: TCP
-    name: http
-  selector:
-    app: score-service
-    component: api
 
 ---
 apiVersion: autoscaling/v2
@@ -150,9 +72,9 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: score-service
+    name: bancho-service-api
   minReplicas: 2
-  maxReplicas: 10
+  maxReplicas: 12
   metrics:
   - type: Resource
     resource:
@@ -160,38 +82,3 @@ spec:
       target:
         type: Utilization
         averageUtilization: 70
-  - type: Resource
-    resource:
-      name: memory
-      target:
-        type: Utilization
-        averageUtilization: 80
-  behavior:
-    scaleUp:
-      stabilizationWindowSeconds: 60
-      policies:
-      - type: Percent
-        value: 100
-        periodSeconds: 15
-      - type: Pods
-        value: 2
-        periodSeconds: 60
-    scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-      - type: Percent
-        value: 10
-        periodSeconds: 60
-
----
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: score-service-pdb
-  namespace: default
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      app: score-service
-      component: api
