--- a/bancho.yaml
+++ b/bancho.yaml
@@ -7,7 +7,7 @@ metadata:
     app: bancho-service-api
 spec:
   # Using autoscaling minReplicas as the starting replica count
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: bancho-service-api
@@ -67,8 +67,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: bancho-service-api
-  minReplicas: 2
-  maxReplicas: 12
+  minReplicas: 1
+  maxReplicas: 1 # for now
   metrics:
   - type: Resource
     resource:
